Добавлена старница с товарами Добавлены страницы с добавлением, редактирование и удалением товаров.

--- a/by.pvt.core/src/main/resources/webapp/cart.html
+++ b/by.pvt.core/src/main/resources/webapp/cart.html
@@ -14,11 +14,11 @@
 <a id="Button2" href="./login.jsp" style="position:absolute;left:788px;top:0px;width:100px;height:29px;z-index:2;">Вход</a>
 <nav id="wb_CssMenu2" style="position:absolute;left:0px;top:0px;width:336px;height:44px;z-index:3;">
 <ul id="CssMenu2" role="menubar" class="nav">
-<li role="menuitem" class="nav-item firstmain"><a class="nav-link" href="./index.html" target="_self" title="Товары">Гланая</a>
+<li role="menuitem" class="nav-item firstmain"><a class="nav-link" href="index.jsp" target="_self" title="Товары">Гланая</a>
 </li>
-<li role="menuitem" class="nav-item"><a class="nav-link" href="./InfoPayment.html" target="_self">Оплата</a>
+<li role="menuitem" class="nav-item"><a class="nav-link" href="InfoPayment.jsp" target="_self">Оплата</a>
 </li>
-<li role="menuitem" class="nav-item"><a class="nav-link" href="./InfoDelivery.html" target="_self">Доставка</a>
+<li role="menuitem" class="nav-item"><a class="nav-link" href="InfoDelivery.jsp" target="_self">Доставка</a>
 </li>
 </ul>
 </nav>
